fixed modal and node z-index

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -119,6 +119,7 @@ input.chk-btn:disabled + label {
 }
 
 .dropdown-options {
+    z-index: 2;
     list-style: none;
     width: 100%;
     position: absolute;
@@ -183,7 +184,8 @@ main {
 .Grid-container:last-child {
     margin-bottom: 30px;
 }
-.Grid {
+.first-Grid,
+.second-Grid {
     display: flex;
     position: relative;
 }
@@ -242,7 +244,7 @@ main {
     overflow-x: hidden;
     overflow-y: hidden;
     position: absolute;
-    /* z-index: 50; */
+    z-index: 1;
     top: 0px;
     right: 0px;
     bottom: 0px;
